--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://alisongaete.github.io/pruebas-unitarias-jest/",
   "name": "platzi-store",
   "version": "1.0.0",
   "description": "Proyecto para el curso de Jest",
