correccion de homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://alisongaete.github.io/pruebas-unitarias-jest/",
+  "homepage": "",
   "name": "platzi-store",
   "version": "1.0.0",
   "description": "Proyecto para el curso de Jest",
